welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:25: error: not found: value faireAntidiag
    faireAntidiag(Color.blue)
    ^